[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.18.2"

[[bin]]
name = "two_sum"
path = "src/001/two_sum.rs"

[[bin]]
name = "palindrome_number"
path = "src/009/palindrome_number.rs"

[[bin]]
name = "go_project"
path = "src/exam/go_project.rs"