[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.18.2"

[[bin]]
name = "go_project"
path = "src/exam/go_project.rs"

[[bin]]
name = "two_sum"
path = "src/001/two_sum.rs"

[[bin]]
name = "palindrome_number"
path = "src/009/palindrome_number.rs"

[[bin]]
name = "roman_to_integer"
path = "src/013/roman_to_integer.rs"

[[bin]]
name = "longuest_common_prefix"
path = "src/014/longest_common_prefix.rs"

[[bin]]
name = "valid_parentheses"
path = "src/020/valid_parentheses.rs"

[[bin]]
name = "mergew_two_sorted_lists"
path = "src/021/mergew_two_sorted_lists.rs"

[[bin]]
name = "remove_duplicates_from_sorted_array"
path = "src/026/remove_duplicates_from_sorted_array.rs"